...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                            </textView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u35-AV-wew">
                                                <rect key="frame" x="16" y="527" width="359" height="80"/>
                                                <color key="backgroundColor" red="0.9179163575" green="0.85539895300000002" blue="0.80463218690000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Recipes of the Day" id="ifd-Yi-Gfh"/>
                    <connections>
                        <outlet property="spinner" destination="KaX-r5-jI8" id="G99-Fe-Tba"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yf0-lk-B83">
                                                    <rect key="frame" x="13" y="10.666666666666668" width="260" height="58.333333333333329"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="itemLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                <button opaque="NO" tag="1003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hh7-a8-nW2">
                                                    <rect key="frame" x="364" y="11" width="30" height="57"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="PantryIncrease">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
...
                                                <button opaque="NO" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ll-WF-cY2">
                                                    <rect key="frame" x="310.33333333333331" y="11" width="30" height="57"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="PantryDecrease"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                    <state key="normal" title="-"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Ingredient e.g. Eggs" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WJt-EW-56y">
                                <rect key="frame" x="10" y="74" width="311" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="PantryTextField">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fL7-fa-9q4">
                                <rect key="frame" x="336" y="73" width="62" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="PantryAddItemButton">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="bQM-qm-LPb"/>
                    </view>
                    <navigationItem key="navigationItem" title="Pantry" id="IYk-YP-u2p"/>
                    <connections>
                        <outlet property="CPTableView" destination="Oip-Mr-La4" id="f0V-3C-tyB"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="2429"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jeremiah" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rj1-Vk-WMP">
                                                <rect key="frame" x="8" y="8" width="304" height="24"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                        <viewLayoutGuide key="safeArea" id="yJM-AG-jRL"/>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="9n5-HC-w6g">
                        <barButtonItem key="backBarButtonItem" title="Back" id="BiJ-GC-dOL"/>
                    </navigationItem>
...
